Clases Conector y Alumno

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ManualBD
 endorsed.classpath=
 excludes=
-file.reference.sqlite-jdbc-3.41.2.1.jar=librerias\\sqlite-jdbc-3.41.2.1.jar
+file.reference.sqlite-jdbc-3.41.2.1.jar=librerias/sqlite-jdbc-3.41.2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,9 +47,10 @@ javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
-    ${javac.classpath}
-javac.source=17
-javac.target=17
+    ${javac.classpath}:\
+    ${file.reference.sqlite-jdbc-3.41.2.1.jar}
+javac.source=11
+javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
